--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ FIXMES:
 - master bus creation + making the bus master needs to go to undo
 - fix gettid syscall to use syscall(2)
 - rename bsesongbus.[hc] to bsebus.[hc]
+- get rid of sniffers entirely (which we're currently leaking per each track+view combination)
 - call bse_song_esnure_*() procs after loading/merging projects
 - change [M] toggle tooltip in the track-view to explain *sequencer* muting (i.e. ignore notes)
 - optimize BseAdder according to BseSummation
@@ -39,7 +40,6 @@ FIXMES:
   if (vinput->vstate == VSTATE_IDLE) g_printerr ("reading from idle\n"); in
   voice_input_module_process() holds true
 - fix bse_gettext()
-- deleting a track doesn't delete it's sniffer
 - report sample rate to stdout if it doesn't match requested rate exactly
 - piano roll/align events: does insert notes with wrong cursor
 - event roll: align events: outline colors don't honour skin colorization
