--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 13 23:12:52 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.proc: copied from bsesongbus.proc.
+
 Tue Jul 13 22:58:15 2004  Tim Janik  <timj@gtk.org>
 
 	* bsebus.c:
