--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jul 14 01:43:05 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecore.idl: added thread id to ThreadInfo.
+
+	* bsecore.cc (collect_thread_totals:.exec): pass on thread_id.
+
 Wed Jul 14 00:14:29 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesongbus.h:
