--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 14 01:40:50 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstprofiler.c: show thread-id if developer hints are
+	enabled. don't show priority for totals.
+
 Wed Jul 14 00:15:49 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstbusview.h:
