--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jul 14 01:54:54 2004  Tim Janik  <timj@gtk.org>
+
+	* sfithreads.c: use syscall (__NR_gettid) instead of
+	_syscall0() which isn't present on ia64 linux. fixed
+	initial accounting values.
+
 Sun Jul 11 23:57:10 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.[hc]: added sfi_ring_from_list(),
