--- a/TODO
+++ b/TODO
@@ -2,16 +2,15 @@ FIXMES:
 - implement ensure-track-links
 - master bus creation + making the bus master needs to go to undo
 - get rid of sniffers entirely (which we're currently leaking per each track+view combination)
-- call bse_song_esnure_*() procs after loading/merging projects
 - change [M] toggle tooltip in the track-view to explain *sequencer* muting (i.e. ignore notes)
 - optimize BseAdder according to BseSummation
 - verify that no IO channel buffer memory is being allocated for virtual modules
 - put "audio channels first, then Ctrl channels (amp)" convention into effect-writing-doc (needed for mix1, mix2, mix5.1 object options)
 - Error: "inputchannelalreadyinuse" should popup new error dialog
 - implement (GUI for) locked properties (e.g. lock bw for lp/hp filters)
-- creating 3 SongBusses and openeing a new view shows 6 song busses, saving, reloading shows 12 busses...
-- save loop coordinbates
+- save loop coordinates
 - when loading/merging bse files, make sure all orphan parts are in a new muted track and delete part-item-view
+- delete parts upon their last unlink from a track
 - implement ordinary save functionality
 - pattern editor: pressing G+1 on G+1, should delete old note (and its length) and insert new note (and its length)
 - pattern editor: add note LENGTH editing!
