Updated British English translation by David Lodge
svn path=/trunk/; revision=2310

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-15  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English translation by
+	David Lodge <dave@cirt.net>
+
 2004-07-15  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
