--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-17  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated British English translation
+
 2004-07-16  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by
