--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jul 17 13:24:57 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: implement iterators for sequences and fblocks.
+
+	* sfiprimitives.[hc]: allow foreign memory regions for fblocks.
+
 Wed Jul 14 01:54:54 2004  Tim Janik  <timj@gtk.org>
 
 	* sfithreads.c: use syscall (__NR_gettid) instead of
